import packeges from tensorflow library

--- a/labs/lab_1_neurons_and_layers.ipynb
+++ b/labs/lab_1_neurons_and_layers.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8f1a69df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import libraries\n",
     "import numpy as np\n",
@@ -23,8 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "196fe57e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import Dense, Input\n",
+    "from tensorflow.keras import Sequential\n",
+    "from tensorflow.keras.losses import MeanSquaredError,BinaryCrossentropy\n",
+    "from tensorflow.keras.activations import sigmoid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7835ad8",
    "metadata": {},
    "outputs": [],
    "source": []
