--- a/labs/lab_1_neurons_and_layers.ipynb
+++ b/labs/lab_1_neurons_and_layers.ipynb
@@ -28,8 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d7835ad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lab_utils_common import dlc\n",
+    "from lab_neurons_utils import plt_prob_1d, sigmoidnp, plt_linear, plt_logistic\n",
+    "plt.style.use('./deeplearning.mplstyle')\n",
+    "import logging\n",
+    "logging.getLogger(\"tensorflow\").setLevel(logging.ERROR)\n",
+    "tf.autograph.set_verbosity(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd82586f",
    "metadata": {},
    "outputs": [],
    "source": []
