--- a/labs/lab_1_neurons_and_layers.ipynb
+++ b/labs/lab_1_neurons_and_layers.ipynb
@@ -80,8 +80,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2f4554eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_layer = tf.keras.layers.Dense(units=1, activation='linear',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8c5fde24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear_layer.get_weights()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "580da3f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([[0.58]], shape=(1, 1), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1=linear_layer(X_train[0].reshape(1,1))\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "22e4083a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [[0.58]], b = [0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w, b=linear_layer.get_weights()\n",
+    "print(f\"w = {w}, b = {b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37eb4e9e",
    "metadata": {},
    "outputs": [],
    "source": []
